# fastapi-template

./: .dockerignore  .env.simple  Dockerfile  LICENSE  README.md  create_admin.py  docker-compose.yaml  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 0a6859ab43fb_initiate_tables.py  2516649d6006_initiate_tables.py
app/: database.py  main.py
app/api/: admin.py  auth.py  payment.py  user.py
app/models/: subscription.py  user.py
app/schemas/: admin.py  auth.py
app/utils/: cache.py  rate_limit.py  rbac.py  redis_client.py  security.py
tests/: conftest.py  test_auth.py  test_rbac.py  test_users.py
